--- a/public/css/output design.css
+++ b/public/css/output design.css
@@ -145,77 +145,18 @@
   font-weight: 500;
 }
 
-/* LOGIN FORM */
-header .header{
-  background-color: #fff;
-  height: 45px;
-}
-
-header a img{
-  width: 134px;
-  margin-top: 4px;
-}
-
-.login-page{
-  width: 360px;
-  padding: 15% 0 0;
-  margin: auto;
-}
-
-.login-page .form .login{
-  margin-top: -31px;
-  margin-bottom: 26px;
-}
-
-.form{
-  position: relative;
-  z-index: 1;
-  background: #ffffff;
-  max-width: 360px;
-  margin: 0 auto 100px;
-  padding: 45px;
-  text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-
-.form input {
-  font-family: "Roboto", sans-serif;
-  outline: 0;
-  background: #f2f2f2;
+/* table */
+.table{
   width: 100%;
-  border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 14px;
-}
-
-.form button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  background-color: #328f8a;
-  background-image: linear-gradient(45deg, #328f8a, #08ac4b);
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: #ffffff;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
-}
-
-.form .message a{
-  color: #4CAF50;
-  text-decoration: none;
+  /* padding: 15% 0 0; */
+  height: 15%;
 }
 
 .container {
-  position: relative;
-  z-index: 1;
-  max-width: 300px;
-  margin: 0 auto;
+  /* position: relative; */
+  /* width: 100%; */
+  max-width: 1500px;
+ 
 }
 
 
@@ -246,6 +187,7 @@ header a img{
   }
 }
 
+
 /* @media (max-width: 700px) {
   nav .sidebar-button .dashboard,
   nav .profile-details .admin_name,
@@ -253,5 +195,5 @@ header a img{
     display: none;
   }
   
+ 
 } */
-
